--- a/C#ProgrammingQuestions/C#ProgrammingQuestions.csproj
+++ b/C#ProgrammingQuestions/C#ProgrammingQuestions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IntersectionOfArray\IntersectionOfArray.csproj" />
+    <ProjectReference Include="..\MissingElementInArray\MissingElementInArray.csproj" />
     <ProjectReference Include="..\ReverseString\ReverseString.csproj" />
     <ProjectReference Include="..\SumofTwoElementInArray\SumofTwoElementInArray.csproj" />
   </ItemGroup>
