Unique Element in an Array

--- a/C#ProgrammingQuestions/C#ProgrammingQuestions.csproj
+++ b/C#ProgrammingQuestions/C#ProgrammingQuestions.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\ReverseString\ReverseString.csproj" />
     <ProjectReference Include="..\SumOfDigits\SumOfDigits.csproj" />
     <ProjectReference Include="..\SumofTwoElementInArray\SumofTwoElementInArray.csproj" />
+    <ProjectReference Include="..\UniqueElementInArray\UniqueElementInArray.csproj" />
   </ItemGroup>
 
 </Project>
