--- a/C#ProgrammingQuestions/C#ProgrammingQuestions.csproj
+++ b/C#ProgrammingQuestions/C#ProgrammingQuestions.csproj
@@ -12,6 +12,7 @@
     <ProjectReference Include="..\3Sum\3Sum.csproj" />
     <ProjectReference Include="..\IntersectionOfArray\IntersectionOfArray.csproj" />
     <ProjectReference Include="..\LeadersInArray\LeadersInArray.csproj" />
+    <ProjectReference Include="..\MergeSortedArray\MergeSortedArray.csproj" />
     <ProjectReference Include="..\MissingElementInArray\MissingElementInArray.csproj" />
     <ProjectReference Include="..\ReverseString\ReverseString.csproj" />
     <ProjectReference Include="..\SumOfDigits\SumOfDigits.csproj" />
